Fixed the rendering state of the randomNumberWaitTime message and made the line-height adjust properly for the react-flip-counter on mobile screens.

--- a/higher-lower/sass/site-modules/react-flip-counter.scss
+++ b/higher-lower/sass/site-modules/react-flip-counter.scss
@@ -24,7 +24,10 @@
         height: 50px * $scale;
     }
 
-    .countdown-days:after, .countdown-hours:after, .countdown-minutes:after {
+    .countdown-seconds:after,
+    .countdown-days:after,
+    .countdown-hours:after,
+    .countdown-minutes:after {
         line-height: 95px * $scale;
         font-size: 60px * $scale;
     }
